--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f2f2f2;
+    background-color: red;
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -9,9 +9,9 @@ body {
   
   .quiz-container {
     max-width: 500px;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
+    background-color: yellow;
+    border-radius: 40px;
+    padding: 120px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
   
@@ -29,7 +29,7 @@ body {
   }
   
   #answer-buttons {
-    display: grid;
+    display: -moz-box;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
   }
